examples/test/testpolicy17965.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17965
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key46: value10
      key21: value1
      key26: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value32
      podSelector:
        matchLabels:
          key46: value40
          key26: value17
